update all explanations

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "source": [
     "### Covid-19 retrospective of the lifelines longitudinal study participants \n",
-    "In this project, I am going to analyze the most important features that can predict the quality of life during Corona pandemic. I tried to check many different factors and find the most correlated ones and then make a model with those to predict the quality of life. I used the dataset of lifeline biobank and extracted the quality of life and then calculate the average the quality of life of participants who filled out the questionnaire per day, because of some limitation rules I can not share the dataset with information from questionnaires, so I made a csv with an average of quality of life base on date and then combine with other datasets and finally, you can use the \"wellbeing_data_collection.csv\" as the final dataset."
+    "In this project, I am going to analyze the most important features that can predict the quality of life during Corona pandemic. I tried to check many different factors and find the most correlated ones and then make a model with those to predict the quality of life. I used the dataset of lifeline biobank and extracted the quality of life and then calculate the average the quality of life of participants who filled out the questionnaire per day, because of some limitation rules I can not share the dataset with information from questionnaires, so I made a csv with an average of quality of life base on date and then combine with other datasets and finally, you can use the \"wellbeing_data_collection.csv\" as the final dataset.\\\n",
+    "It appears that this project is a kind of regression supervised machine learning."
    ]
   },
   {
@@ -46,6 +47,7 @@
    "metadata": {},
    "source": [
     "### dataset\n",
+    "This dataset includes 482 rows and 47 columns that I explained the columns below.\n",
     "**column name** | **explaination**\n",
     "-----|-----\n",
     "date |the specific date that participants fill the questionnaire in lifelines\n",
@@ -365,6 +367,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26eef119",
+   "metadata": {},
+   "source": [
+    "I plotted the quality of life to have an overview of it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "9313211e",
@@ -591,7 +601,7 @@
    "metadata": {},
    "source": [
     "At this level, I wanted to decide what should I do for the columns that have 129 nulls out of 463 and find a logical answer to this question: Is it better to drop these columns or interpolate the values?\\\n",
-    "So I plot the heat map and see there is a very low correlation(less than 0.2) between these columns and quality of life so I decided to drop those instead of spending time to interpolating."
+    "So I plotted the heat map and see there is a very low correlation(less than 0.2) between these columns and quality of life so I decided to drop those instead of spending time to interpolating."
    ]
   },
   {
@@ -882,7 +892,7 @@
    ],
    "source": [
     "#check the skew data\n",
-    "skew_columns = (df[features].skew().sort_values(ascending=False))\n",
+    "skew_columns = (df[features].skew())\n",
     "skew_columns = skew_columns.loc[skew_columns > 0.75]\n",
     "skew_columns"
    ]
@@ -905,7 +915,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1f5e345f310>"
+       "<seaborn.axisgrid.PairGrid at 0x20a9456caf0>"
       ]
      },
      "execution_count": 12,
@@ -1091,7 +1101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Function of plot the comparison of RMSE between train and test dataset\n",
+    "#Function of plotting the comparison of RMSE between train and test dataset\n",
     "def plot_learning_curves(model, X_train, y_train, X_val, y_val):\n",
     "    \"\"\"\n",
     "    input:\n",
