please open it in visual code

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -915,7 +915,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x20a9456caf0>"
+       "<seaborn.axisgrid.PairGrid at 0x20800790220>"
       ]
      },
      "execution_count": 12,
