add more explanations

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ca222a15",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e7e92399",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0689b169",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9313211e",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "915b5a39",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "69962859",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "de4fa187",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dda0c7bf",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b2ba90e9",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b48da689",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3d0687af",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
        "Series([], dtype: float64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,17 +908,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9e4f8246",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x20800790220>"
+       "<seaborn.axisgrid.PairGrid at 0x2215c661cd0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "95df65d6",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
        "Name: quality_of_life, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b06a942b",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6f6aedfc",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "de510626",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5d85c824",
    "metadata": {},
    "outputs": [],
@@ -1095,8 +1095,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8aae580d",
+   "metadata": {},
+   "source": [
+    "Below is the Function of plotting the comparison of RMSE between the train and test dataset and I used it in all 3 models."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "dba53bdd",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "4c12864c",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "99d40612",
    "metadata": {},
    "outputs": [
@@ -1218,6 +1226,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bd9a28d",
+   "metadata": {},
+   "source": [
+    "you can see the R2 of linear regression and also the accuracy of the train and test. There is an overfit after around 140 samples. This is acceptable for linear regression but still, needs more accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36759296",
    "metadata": {},
    "source": [
@@ -1226,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3d471b37",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1272,7 @@
        "(-5.0, 5.0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1297,6 +1313,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d57441dc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "As you can see there is a very good plot of polynomial linear regression with a good score in the train and test. So I think the polynomial is the good option but let's try to do another model as well and that is random forest because most of the time the random forest does the better performance in both. regression and classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0867ae75",
    "metadata": {},
    "source": [
@@ -1305,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "fe92dbed",
    "metadata": {},
    "outputs": [
@@ -1353,13 +1378,15 @@
    "id": "5e3499a5",
    "metadata": {},
    "source": [
+    "\n",
+    "with Random forest, I could get a better result score, especially on the train, and also the RMSE is under 0.1.\\\n",
     "Due to the accuracy of the three models, the results accuracy of Polynomial linear regression and random forest are very close to each other.\n",
     "So, I tried repeating those two models with the different random states to check the accuracy and rmse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "eae350c3",
    "metadata": {},
    "outputs": [],
@@ -1379,8 +1406,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "200ee5c9",
+   "metadata": {},
+   "source": [
+    "Bellow I checked the accuracy and rmse with different degrees of polynomial regression and as the result, the degree of 4 is the best one as I choose it before for polynomial regression."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "6349feae",
    "metadata": {},
    "outputs": [
@@ -1411,8 +1446,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d3a93e2",
+   "metadata": {},
+   "source": [
+    "Bellow check the different accuracy and rsme with different randome satate of polynomial regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "9660e578",
    "metadata": {},
    "outputs": [
@@ -1436,14 +1479,14 @@
     }
    ],
    "source": [
-    "#check the different accuracy and rsme with different randome satate of polynomial regression\n",
+    "\n",
     "for i in [10,20,30,40,50,60]:\n",
     "    poly_reg(degree=4,random_state=i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "0c9fcdf0",
    "metadata": {},
    "outputs": [],
@@ -1462,8 +1505,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75e0ae4e",
+   "metadata": {},
+   "source": [
+    "Bellow I checked different accuracy with repeating the random forest model with various random states"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "e8a8d7a8",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "46dc94cd",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "9f99d0c2",
    "metadata": {},
    "outputs": [
