add future goal

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1612,6 +1612,14 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78e2e782",
+   "metadata": {},
+   "source": [
+    "For future goals, I believe we can improve this model with deep learning technics. So in the next step, by adding some layers to a neural network, we can raise the accuracy and reduce the loss."
+   ]
   }
  ],
  "metadata": {
