made a few textual changes to make some difficulties explicit.

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "source": [
     "### Covid-19 retrospective of the lifelines longitudinal study participants \n",
-    "In this project, I am going to analyze the most important features that can predict the quality of life during Corona pandemic. I tried to check many different factors and find the most correlated ones and then make a model with those to predict the quality of life. I used the dataset of lifeline biobank and extracted the quality of life and then calculate the average the quality of life of participants who filled out the questionnaire per day, because of some limitation rules I can not share the dataset with information from questionnaires, so I made a csv with an average of quality of life base on date and then combine with other datasets and finally, you can use the \"wellbeing_data_collection.csv\" as the final dataset.\\\n",
+    "In this project, I am going to analyze the most important features that can predict the quality of life during Corona pandemic. I tried to check many different factors and find the most correlated ones. Then I create a model with those features to predict the quality of life. I used the dataset of lifeline biobank, extracted the quality of life and then calculated the average the quality of life of participants who filled out the questionnaire per day. Because of some limitation rules, I cannot share the dataset with information from questionnaires. Therefore I made a csv with an average of quality of life base on date and combined with other datasets. You can use the \"wellbeing_data_collection.csv\" as the final dataset.\n",
+    "\n",
     "It appears that this project is a kind of regression supervised machine learning."
    ]
   },
@@ -47,7 +48,8 @@
    "metadata": {},
    "source": [
     "### dataset\n",
-    "This dataset includes 482 rows and 47 columns that I explained the columns below.\n",
+    "The dataset includes 482 rows and 47 columns. I explain the columns below.\n",
+    "\n",
     "**column name** | **explaination**\n",
     "-----|-----\n",
     "date |the specific date that participants fill the questionnaire in lifelines\n",
@@ -407,7 +409,7 @@
    "id": "65bcc175",
    "metadata": {},
    "source": [
-    "As you can see there are many outliers so I tried to delete the outlier by checking the number of participants who filled out the questionnaire per day. you can see the result below."
+    "As you can see, there are many outliers. So I tried to delete these by checking the number of participants who filled out the questionnaire per day. You can see the result below."
    ]
   },
   {
@@ -442,7 +444,7 @@
    "id": "0a032b94",
    "metadata": {},
    "source": [
-    "As you can see, the number of people who filled out the questionnaire was declined during the time so try to make an outlier to drop the days that are not accurate, on the other hand, I deleted the days which on that specific day, the number of participants who filled out the questionnaire was more than 50 people. The reason I chose 50 is that with just losing 19 rows, I can get a good result as you can see in the plot below but if I choose more than 50 I will lose more rows."
+    "As you can see, the number of people who filled out the questionnaire was declined over time, so I tried to make an outlier to drop the days that are not accurate. On the other hand, I deleted the days on which the number of participants was more than 50 people. The reason I chose 50 is that with just losing 19 rows, I can get a good result as you can see in the plot below. If I choose more than 50 I will lose too many rows."
    ]
   },
   {
@@ -489,7 +491,7 @@
    "id": "af266c89",
    "metadata": {},
    "source": [
-    "In the bellow plot, you can see the null data with white color. Then I tried to count the null data and finally drop the columns that had the most nulls ( 449 null and 437 null out of 463 )and were not useful."
+    "In the plot blow, you can see the null data with white color. Then I tried to count the null data and finally drop the columns that had the most nulls ( 449 null and 437 null out of 463) and were not useful."
    ]
   },
   {
@@ -600,8 +602,8 @@
    "id": "cb0091f7",
    "metadata": {},
    "source": [
-    "At this level, I wanted to decide what should I do for the columns that have 129 nulls out of 463 and find a logical answer to this question: Is it better to drop these columns or interpolate the values?\\\n",
-    "So I plotted the heat map and see there is a very low correlation(less than 0.2) between these columns and quality of life so I decided to drop those instead of spending time to interpolating."
+    "At this level, I wanted to decide what I should do for the columns that have 129 nulls out of 463 and find a logical answer to this question: Is it better to drop these columns or interpolate the values?\\\n",
+    "So I plotted the heat map and saw there is a very low correlation (less than 0.2) between these columns and quality of life. So I decided to drop those instead of spending time to interpolating."
    ]
   },
   {
@@ -903,7 +905,7 @@
    "metadata": {},
    "source": [
     "I used the pair plot to find the correlation between the remaining features to select the independent features to use in modeling.\\\n",
-    " Then I calculated the correlations and sort and you can see the first three ones are the best and they are independent of each other as well."
+    " Then I calculated the correlations and sort them. You can see that the first three are the best and they are independent of each other as well."
    ]
   },
   {
@@ -1054,7 +1056,7 @@
    "id": "e14b26a4",
    "metadata": {},
    "source": [
-    "I checked the minimum and maximum standard deviation and as you can see there is a big difference between those so we need to normalize the data."
+    "I checked the minimum and maximum standard deviation. As you can see, there is a big difference between those, therefore we need to normalize the data."
    ]
   },
   {
@@ -1099,7 +1101,7 @@
    "id": "8aae580d",
    "metadata": {},
    "source": [
-    "Below is the Function of plotting the comparison of RMSE between the train and test dataset and I used it in all 3 models."
+    "Below is the function of plotting the comparison of RMSE between the train and test dataset. I used it in all 3 models."
    ]
   },
   {
@@ -1229,7 +1231,7 @@
    "id": "3bd9a28d",
    "metadata": {},
    "source": [
-    "you can see the R2 of linear regression and also the accuracy of the train and test. There is an overfit after around 140 samples. This is acceptable for linear regression but still, needs more accuracy."
+    "You can see the R2 of linear regression and also the accuracy of the train and test sets. There is an overfit after around 140 samples. This is acceptable for linear regression but still, needs more accuracy."
    ]
   },
   {
@@ -1317,7 +1319,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "As you can see there is a very good plot of polynomial linear regression with a good score in the train and test. So I think the polynomial is the good option but let's try to do another model as well and that is random forest because most of the time the random forest does the better performance in both. regression and classification"
+    "As you can see in the plot above, there is a very good result with polynomial linear regression in the train and test sets. So I think the polynomial is the good option, but let's try to do another model as well. We will use random forest, because most of the time the random forest does a better performance in both regression and classification."
    ]
   },
   {
@@ -1379,7 +1381,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "with Random forest, I could get a better result score, especially on the train, and also the RMSE is under 0.1.\\\n",
+    "With Random forest, I could get a better result score, especially on the train, and also the RMSE is under 0.1.\\\n",
     "Due to the accuracy of the three models, the results accuracy of Polynomial linear regression and random forest are very close to each other.\n",
     "So, I tried repeating those two models with the different random states to check the accuracy and rmse"
    ]
@@ -1410,7 +1412,7 @@
    "id": "200ee5c9",
    "metadata": {},
    "source": [
-    "Bellow I checked the accuracy and rmse with different degrees of polynomial regression and as the result, the degree of 4 is the best one as I choose it before for polynomial regression."
+    "Below I checked the accuracy and RMSE with different degrees of polynomial regression. As you can see, the degree of 4 is the best one so I choose it before for polynomial regression."
    ]
   },
   {
@@ -1450,7 +1452,7 @@
    "id": "5d3a93e2",
    "metadata": {},
    "source": [
-    "Bellow check the different accuracy and rsme with different randome satate of polynomial regression"
+    "Below I check the different accuracy and RSME with different random state of polynomial regression."
    ]
   },
   {
@@ -1509,7 +1511,7 @@
    "id": "75e0ae4e",
    "metadata": {},
    "source": [
-    "Bellow I checked different accuracy with repeating the random forest model with various random states"
+    "Below I checked different accuracy with repeating the random forest model with various random states."
    ]
   },
   {
@@ -1548,7 +1550,7 @@
    "id": "2451940e",
    "metadata": {},
    "source": [
-    "As a result, although the polynomial linear regression has a better accuracy between train and test(as you can see in the curve plot), the random forest model has the better accuracy during repetition and it is not under 84%(sometimes 90%), Also we can see during the repetition the RMSE is not more than 1%, so I think the random forest is more acceptable for modeling rather than others. and it was predictable because the result of random forest is the average of 200 trees, so most of the time the result of that is more accurate than other regression methods."
+    "As a result, although the polynomial linear regression has a better accuracy between train and test sets (as you can see in the curve plot), the random forest model has the better accuracy during repetition and it is not under 84% (sometimes 90%). Also we can see during the repetition the RMSE is not more than 1%, so I think the random forest is more acceptable for modeling rather than others.  It was predictable because the result of random forest is the average of 200 trees, so most of the time the result of that is more accurate than other regression methods."
    ]
   },
   {
@@ -1618,7 +1620,7 @@
    "id": "78e2e782",
    "metadata": {},
    "source": [
-    "For future goals, I believe we can improve this model with deep learning technics. So in the next step, by adding some layers to a neural network, we can raise the accuracy and reduce the loss."
+    "For future goals, I believe we can improve this model with deep learning techniques. So a possible next step would be adding some layers to a neural network. In that way we can raise the accuracy and reduce the loss."
    ]
   }
  ],
